--- a/2022-1/beamer/C03_md1.tex
+++ b/2022-1/beamer/C03_md1.tex
@@ -341,7 +341,7 @@ La clase que viene aprenderemos un método (principio de inducción) que nos per
 \medspace 
  
 
- \medspace 
+\begin{frame}\frametitle{} 	
 
 
 
@@ -352,7 +352,7 @@ La clase que viene aprenderemos un método (principio de inducción) que nos per
  $$\pause 
  Por completitud,  definimos $x^0=1$ cuando $x \ne 0$ y  dejamos indefinido $0^0$. 
 
-
+\end{frame}
 
 \end{document}
 
