--- a/2022-1/beamer/C03_md1.tex
+++ b/2022-1/beamer/C03_md1.tex
@@ -1,7 +1,7 @@
-\documentclass{beamer} 
-%\documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -262,7 +262,7 @@ La clase que viene aprenderemos un método (principio de inducción) que nos per
 	Ambas significan que sumamos los primeros $n$ números naturales, pero cada uno contiene un misterioso símbolo, $\sum$ y $\cdots$,
 	respectivamente. 
 	
-	\medspace 
+	\vskip .4cm
 	\pause 
 	Lo que deberíamos decir es que cada uno de ellos
 	es equivalente a la expresión $s_n$, dada por la siguiente
@@ -336,10 +336,6 @@ La clase que viene aprenderemos un método (principio de inducción) que nos per
 	
 \end{frame}
 
- 
-
-\medspace 
- 
 
 \begin{frame}\frametitle{} 	
 
@@ -350,7 +346,7 @@ La clase que viene aprenderemos un método (principio de inducción) que nos per
  $$
  x^1=x,\qquad x^n= x \cdot x^{n-1} \quad (n\ge 2).
  $$\pause 
- Por completitud,  definimos $x^0=1$ cuando $x \ne 0$ y  dejamos indefinido $0^0$. 
+ Por completitud,  definimos $x^0=1$ para todo $x$. 
 
 \end{frame}
 
