--- a/2022-1/beamer/C04_md1.tex
+++ b/2022-1/beamer/C04_md1.tex
@@ -139,6 +139,7 @@
 		\item $a_2 = 1 + 3 = 4$, 
 		\item $a_3 = 1 + 3 + 5 = 9$, 
 		\item $a_4 = 1 + 3 + 5 + 7= 16 $, 
+		\item $a_5 = a_4 + 9= 25   $, 
 	\end{itemize}
 	
 \end{frame}
@@ -150,29 +151,41 @@
 	1+3+5+\cdots+(2n-1) = n^2.
 	$$
 	\pause
-	Para convencernos de que la fórmula es ciertamente correcta procedemos de la siguiente manera: cuando $n=1$ puesto que
-	$1=1^2$.\pause
-	Supongamos que es correcta para un valor específico
+	Para convencernos de que la fórmula es ciertamente correcta procedemos de la siguiente manera
+    \vskip .4cm
+    \textbf{Caso n=1.} La fórmula es verdadera cuando $n=1$ puesto que 	$1=1^2$.\pause
+	
+    
+    \vskip .4cm
+    \textbf{Paso recursivo.}Supongamos que es correcta para un valor específico
 	de $n$, digamos para $n=k$, de modo que
-	$$
-	1+3+5+\cdots+(2k-1) = k^2.
-	$$
+	\begin{equation*}
+	1+3+5+\cdots+(2k-1) = k^2. \tag{a}
+	\end{equation*}
 
 
 
 \end{frame}
 
 \begin{frame}
-		Podemos usar esto para simplificar la expresión definida
+		Podemos utilizar (a) para simplificar la expresión definida
 	recursivamente a la izquierda cuando $n$ es igual a $k+1$,\pause
 	$$
 	\begin{aligned}
 	1+3+5+\cdots+(2k+1) &= 1+3+5+\cdots+(2k-1) +(2k+1) \\
-	&=k^2 +(2k+1) \\
+	&\stackrel{(a)}{=}k^2 +(2k+1) \\
 	&=(k+1)^2.
 	\end{aligned}
 	$$\pause
-	Por lo tanto si el resultado es correcto cuando $n=k$, entonces lo es cuando $n=k+1$. \pause Se comienza observando que si es correcto cuando $n=1$, debe ser por lo tanto correcto cuando $n=2$. Con el mismo argumento como es correcto cuando $n=2$ debe serlo cuando $n=3$. Continuando de esta forma veremos que es correcto para todos los enteros positivos $n$.
+	Por lo tanto si el resultado es correcto cuando $n=k$, entonces lo es cuando $n=k+1$. \pause 
+    
+    \vskip .4cm
+    Se comienza observando que si es correcto cuando $n=1$, debe ser por lo tanto correcto cuando $n=2$. 
+    \pause 
+    
+    \vskip .4cm
+    
+    Con el mismo argumento como es correcto cuando $n=2$ debe serlo cuando $n=3$. Continuando de esta forma veremos que es correcto para todos los enteros positivos $n$.
 \end{frame}
 
 \begin{frame}
@@ -246,10 +259,10 @@
 	números naturales. Por ejemplo, consideremos la siguiente propieda de $P(n)$:
 	\medskip 
 	\begin{itemize}
-		\item $P(n)$ es la propiedad: $2n -1 < n^2 + 1$,
+		\item $P(n)$ es la propiedad: \quad $\displaystyle\sum_{i=1}^n 2i-1 = n^2$,
 	\end{itemize}
 \medskip 
-	Intuitivamente notamos que $P(n)$ es verdadera para cualquier $n$ natural y lo podemos probar usando el siguiente teorema: 
+	Hemos notado que $P(n)$ es verdadera para cualquier $n$ natural y lo podríamos probar usando el siguiente teorema: 
 	\medskip 
 
 
@@ -392,7 +405,7 @@
 \end{frame}
 
 \begin{frame}	
-	El siguiente teorema incorpora todas las modificaciones del principio de inducción mencionadas más arriba.
+	El siguiente teorema incorpora muchas de las modificaciones del principio de inducción mencionadas más arriba.
 
     \pause
 	\medskip
