--- a/2022-1/beamer/C07_md1.tex
+++ b/2022-1/beamer/C07_md1.tex
@@ -1,7 +1,8 @@
-%\documentclass{beamer} 
-\documentclass[handout]{beamer} % sin pausas
+%\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} 
+\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
 \usetheme{CambridgeUS}
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -23,10 +24,10 @@
 \usetikzlibrary{arrows}
 \usetikzlibrary{matrix}
 \tikzset{
-	every picture/.append style={
-		execute at begin picture={\deactivatequoting},
-		execute at end picture={\activatequoting}
-	}
+    every picture/.append style={
+        execute at begin picture={\deactivatequoting},
+        execute at end picture={\activatequoting}
+    }
 }
 \usetikzlibrary{decorations.pathreplacing,angles,quotes}
 \usetikzlibrary{shapes.geometric}
@@ -37,9 +38,9 @@
 \usepackage{tkz-graph}
 \usepackage{polynom}
 \polyset{%
-	style=B,
-	delims={(}{)},
-	div=:
+    style=B,
+    delims={(}{)},
+    div=:
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
@@ -96,8 +97,8 @@
 \title[Clase 7 - Conteo 2]{Matemática Discreta I \\ Clase 7 - Conteo ($2^{\circ}$ parte)}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
-	\\[\baselineskip] ${}^{}$
-	\\[\baselineskip]
+    \\[\baselineskip] ${}^{}$
+    \\[\baselineskip]
 }
 \date[08/04/2022]{7 de abril  de 2022}
 
@@ -110,158 +111,155 @@
 
 
 
-\begin{frame}	\frametitle{Selecciones ordenadas sin repetición}
-	$X$ finito de $n$ objetos. 
-	
-	\vskip .2cm
-	\begin{center}
-		{\it ¿De cuántas formas podemos elegir $m$ objetos de $X$ en forma ordenada?}
-	\end{center}
-	\vskip .3cm		\pause 
-	%\begin{proposicion} 
-	{\color{blue}Ejemplo}
-	\vskip .2cm
-	Elegir en forma ordenada y sin repetición 2 elementos del conjunto $X = \{ a,b,c\}$,\pause {} tenemos \quad $ ab,\quad ac,\quad ba,\quad bc,\quad ca,\quad cb,$ \quad 
-	6  elecciones.
-	
-	\vskip .5cm	\pause
-	
-	Es decir si  el conjunto es $X= \{a_1,a_2,\ldots,a_n\}$, las selecciones deben ser del tipo 
-	$$
-	a_{i_1} a_{i_2} \cdots a_{i_m}
-	$$
-	donde  $a_{i_j} \not= a_{i_k}$ si $i\not=k$. 
+\begin{frame}    \frametitle{Selecciones ordenadas sin repetición}
+    $X$ finito de $n$ objetos. 
+    
+    \vskip .2cm
+    \begin{center}
+        {\it ¿De cuántas formas podemos elegir $m$ objetos de $X$ en forma ordenada?}
+    \end{center}
+    \vskip .3cm        \pause 
+    %\begin{proposicion} 
+    {\color{blue}Ejemplo}
+    \vskip .2cm
+    Elegir en forma ordenada y sin repetición 2 elementos del conjunto $X = \{ a,b,c\}$,\pause {} tenemos \quad $ ab,\quad ac,\quad ba,\quad bc,\quad ca,\quad cb,$ \quad 
+    6  elecciones.
+    
+    \vskip .5cm    \pause
+    
+    Es decir si  el conjunto es $X= \{a_1,a_2,\ldots,a_n\}$, las selecciones deben ser del tipo 
+    $$
+    a_{i_1} a_{i_2} \cdots a_{i_m}
+    $$
+    donde  $a_{i_j} \not= a_{i_k}$ si $i\not=k$. 
 \end{frame}
 
 
 
 
 
-\begin{frame}		
-	Por ejemplo, las selecciones de $3$ elementos en forma ordenada y sin repetición de $\{1, 2,3\}$  son exactamente \pause
-	$$
-	1 2 3,\; 1 3 2,\; 2 1 3,\; 2 3 1,\; 3 1 2,\; 3 2 1
-	$$
-	(son las ternas donde los tres números son distintos). 
-	
-	\vskip .3cm	
-	\pause
-	O sea hay $6$ selecciones ordenadas y sin repetición de  elementos de $\{1, 2,3\}$.
-	\vskip .3cm	
-	Notemos que: 
-	\vskip .3cm	
-	\begin{tabular}{lll}
-		$1^{\circ}$ elemento &$\to$ & 3 posibilidades: 1, 2, 3 \\
-		$2^{\circ}$ elemento &$\to$ & 2 posibilidades: distinto  al elegido en $1^{\circ}$ \\
-		$3^{\circ}$ elemento &$\to$ & 1 posibilidades: distinto  a los elegidos en $1^{\circ}$  y $2^{\circ}$
-	\end{tabular}
-	\vskip .3cm	
-	Tenemos entonces  $3 \cdot 2 \cdot 1 = 3!$ selecciones posibles.
-	\vskip .2cm	\vskip .2cm	
+\begin{frame}        
+    Por ejemplo, las selecciones de $3$ elementos en forma ordenada y sin repetición de $\{1, 2,3\}$  son exactamente \pause
+    $$
+    1 2 3,\; 1 3 2,\; 2 1 3,\; 2 3 1,\; 3 1 2,\; 3 2 1
+    $$
+    (son las ternas donde los tres números son distintos). 
+    
+    \vskip .3cm    
+    \pause
+    O sea hay $6$ selecciones ordenadas y sin repetición de  elementos de $\{1, 2,3\}$.
+    \vskip .3cm    
+    Notemos que: 
+    \vskip .3cm    
+    \begin{tabular}{lll}
+        $1^{\circ}$ elemento &$\to$ & 3 posibilidades: 1, 2, 3 \\
+        $2^{\circ}$ elemento &$\to$ & 2 posibilidades: distinto  al elegido en $1^{\circ}$ \\
+        $3^{\circ}$ elemento &$\to$ & 1 posibilidades: distinto  a los elegidos en $1^{\circ}$  y $2^{\circ}$
+    \end{tabular}
+    \vskip .3cm    
+    Tenemos entonces  $3 \cdot 2 \cdot 1 = 3!$ selecciones posibles.
+    \vskip .2cm    \vskip .2cm    
 \end{frame}
 
 
-\begin{frame}	
-	Pensemos ahora que queremos elegir en forma ordenada y sin repetición $3$ elementos entre $5$. Entonces para la primera elección tenemos $5$ posibilidades, para la segunda $4$ posibilidades y para la tercera $3$ posibilidades haciendo un total de 
-	$$
-	5 \cdot 4 \cdot 3
-	$$
-	selecciones posibles. 
+\begin{frame}    
+    Pensemos ahora que queremos elegir en forma ordenada y sin repetición $3$ elementos entre $5$. Entonces para la primera elección tenemos $5$ posibilidades, para la segunda $4$ posibilidades y para la tercera $3$ posibilidades haciendo un total de 
+    $$
+    5 \cdot 4 \cdot 3
+    $$
+    selecciones posibles. 
+    
+
+    \pause
+    \vskip .5cm    
+    %\begin{proposicion} 
+    {\color{blue}Proposición}\label{ordsinrep}
+    \vskip .2cm
+    {\it Si $n \ge m$ entonces existen
+        \begin{equation*}
+        n \cdot (n - 1) \cdots (n - m + 1), \qquad \text{($m$ - factores)}
+        \end{equation*}
+        selecciones ordenadas y sin repetición de $m$ elementos de un conjunto de $n$ elementos.}
+    %\end{proposicion}
 \end{frame}
 
 
-\begin{frame}	    
 
-
-	\vskip .3cm	
-	%\begin{proposicion} 
-	{\color{blue}Proposición}\label{ordsinrep}
-	\vskip .2cm
-	{\it Si $n \ge m$ entonces existen
-		\begin{equation*}
-		n \cdot (n - 1) \cdots (n - m + 1), \qquad \text{($m$ - factores)}
-		\end{equation*}
-		selecciones ordenadas y sin repetición de $m$ elementos de un conjunto de $n$ elementos.}
-	%\end{proposicion}
+\begin{frame}    
+    
+    
+    {\color{blue}Ejemplo}
+    \vskip .2cm
+    
+    Si  hay 10 personas ¿De cuántas formas puedo  hacer una fila de 7 personas?
+    \vskip .2cm\pause
+    {\color{blue}Solución.}\pause
+    \vskip .2cm
+    Razonando,
+    \vskip .3cm    
+    \begin{tabular}{llrl}
+        $1^{\circ}$ puesto &$\to$ & 10 &posibilidades \\\pause
+        $2^{\circ}$ puesto &$\to$ & 9 &posibilidades\\\pause
+        $3^{\circ}$ puesto &$\to$ & 8 &posibilidades \\\pause
+        $4^{\circ}$ puesto &$\to$ & 7 &posibilidades \\\pause
+        $5^{\circ}$ puesto &$\to$ & 6 &posibilidades\\\pause
+        $6^{\circ}$ puesto &$\to$ & 5 &posibilidades \\\pause
+        $7^{\circ}$ puesto &$\to$ & 4 &posibilidades \\\pause
+    \end{tabular}
+    \vskip .3cm    
+    La solución es entonces $10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4$.\qed
+    
 \end{frame}
 
 
-
-\begin{frame}	
-	
-	
-	{\color{blue}Ejemplo}
-	\vskip .2cm
-	
-	Si  hay 10 personas ¿De cuántas formas puedo  hacer una fila de 7 personas?
-	\vskip .2cm\pause
-	{\color{blue}Solución.}\pause
-	\vskip .2cm
-	Razonando,
-	\vskip .3cm	
-	\begin{tabular}{llrl}
-		$1^{\circ}$ puesto &$\to$ & 10 &posibilidades \\\pause
-		$2^{\circ}$ puesto &$\to$ & 9 &posibilidades\\\pause
-		$3^{\circ}$ puesto &$\to$ & 8 &posibilidades \\\pause
-		$4^{\circ}$ puesto &$\to$ & 7 &posibilidades \\\pause
-		$5^{\circ}$ puesto &$\to$ & 6 &posibilidades\\\pause
-		$6^{\circ}$ puesto &$\to$ & 5 &posibilidades \\\pause
-		$7^{\circ}$ puesto &$\to$ & 4 &posibilidades \\\pause
-	\end{tabular}
-	\vskip .3cm	
-	La solución es entonces $10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4$.\qed
-	
-\end{frame}
-
-
-\begin{frame}	
-	
-	
-	{\color{blue}Ejemplo (repetido)}
-	\vskip .2cm
-	
-	Si  hay 10 personas ¿De cuántas formas puedo  hacer una fila de 7 personas?
-	\vskip .2cm\pause
-	{\color{blue}Solución (aplicando la proposición de p. \ref{ordsinrep}).}\pause
-	\vskip .2cm
-	\begin{tabular}{llr}
-		Cantidad  de elementos: &$\to$ & $n = 10$ \\\pause
-		Cantidad  de elecciones: &$\to$ & $m = 7$ \pause
-	\end{tabular}
-	\vskip .3cm	\pause
-	Por lo tanto, $n-m+1 = 10 - 7 +1  = 4$.
-	\vskip .3cm	\pause
-	La solución es entonces: $10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4$.
-	
-	\vskip .5cm	 \pause
-	
-	Observar que
-	\begin{align*}
-	10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4 &= \frac{10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4\cdot 3\cdot 2\cdot1}{3\cdot 2\cdot1} = \frac{10!}{3!} \\
+\begin{frame}    
+    
+    
+    {\color{blue}Ejemplo (repetido)}
+    \vskip .2cm
+    
+    Si  hay 10 personas ¿De cuántas formas puedo  hacer una fila de 7 personas?
+    \vskip .2cm\pause
+    {\color{blue}Solución (aplicando la proposición de p. \ref{ordsinrep}).}\pause
+    \vskip .2cm
+    \begin{tabular}{llr}
+        Cantidad  de elementos: &$\to$ & $n = 10$ \\\pause
+        Cantidad  de elecciones: &$\to$ & $m = 7$
+    \end{tabular}
+    \vskip .3cm    \pause
+    Por lo tanto, $n-m+1 = 10 - 7 +1  = 4$.
+    \vskip .3cm    \pause
+    La solución es entonces: $10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4$.
+    
+    \vskip .5cm     \pause
+    
+    Observar que
+    \begin{align*}
+    10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4 &= \frac{10 \cdot 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4\cdot 3\cdot 2\cdot1}{3\cdot 2\cdot1} = \frac{10!}{3!} \\
     &= \frac{10!}{(10 -7)!}.
-	\end{align*}\qed
-	
+    \end{align*}\qed
+    
 \end{frame}
 
 
-\begin{frame}	
+\begin{frame}    
 
     {\color{blue}Ejemplo}
-	\vskip .2cm
-	¿Cómo elegir 4 elementos entre $n$?
-	\vskip .2cm\pause
-	{\color{blue}Solución.}\pause
-	\vskip .2cm
-	Razonando,
-	\vskip .3cm	
-	\begin{tabular}{llrl}
-		$1^{\circ}$ puesto &$\to$ & n-1 &posibilidades \\\pause
-		$2^{\circ}$ puesto &$\to$ & n-2 &posibilidades\\\pause
-		$3^{\circ}$ puesto &$\to$ & n-3 &posibilidades \\\pause
-		$4^{\circ}$ puesto &$\to$ & n-4 &posibilidades \\\pause
-	\end{tabular}
+    \vskip .2cm
+    ¿Cómo elegir 4 elementos entre $n$?
+    \vskip .2cm\pause
+    {\color{blue}Solución.}\pause
+    \vskip .2cm
+    Razonando,
+    \vskip .3cm    
+    \begin{tabular}{llrl}
+        $1^{\circ}$ puesto &$\to$ & n-1 &posibilidades \\\pause
+        $2^{\circ}$ puesto &$\to$ & n-2 &posibilidades\\\pause
+        $3^{\circ}$ puesto &$\to$ & n-3 &posibilidades \\\pause
+        $4^{\circ}$ puesto &$\to$ & n-4 &posibilidades \\\pause
+    \end{tabular}
 
-	La solución es entonces 
+    La solución es entonces 
     \begin{align*}
         (n-1)  (n-2)  (n-3) (n-4) &= \frac{(n-1) (n-2)  (n-3)(n-4) (n-5)!}{(n-5)!}\\
         &=\frac{n!}{(n-5)!}
@@ -271,11 +269,11 @@
 \end{frame}
 
 \begin{frame}
-	En general
-	\begin{equation*}
-	n \cdot (n-1)  \cdots (n - m +1) = \frac{	n \cdot (n-1)\cdots (n - m + 1) \cdot (n-m) \cdots 2 \cdot 1 }{(n-m) \cdots 2 \cdot  1 }.
-	\end{equation*}
-    \vskip .5cm	\pause
+    En general
+    \begin{equation*}
+    n \cdot (n-1)  \cdots (n - m +1) = \frac{    n \cdot (n-1)\cdots (n - m + 1) \cdot (n-m) \cdots 2 \cdot 1 }{(n-m) \cdots 2 \cdot  1 }.
+    \end{equation*}
+    \vskip .5cm    \pause
     Es decir 
 
     \setbeamercolor{postit}{fg=black,bg=example text.fg!75!black!10!bg}
@@ -286,8 +284,8 @@
     \end{beamercolorbox}    
 
 
-	\vskip 1cm	\pause
-	Por lo tanto podemos reescribir la proposición en forma mas compacta:
+    \vskip 1cm    \pause
+    Por lo tanto podemos reescribir la proposición en forma mas compacta:
 
     
 \end{frame}
@@ -297,83 +295,83 @@
 \begin{frame}
 
 
-	{\color{blue}Proposición}
-	\vskip .2cm
-	{\it Si $n \ge m$ entonces existen
-		\begin{equation*}\label{ordsinrep} 
-		\frac{n!}{(n-m)!}
-		\end{equation*}
-		selecciones ordenadas y sin repetición de $m$ elementos de un conjunto de $n$ elementos.}
-	%\end{proposicion}
+    {\color{blue}Proposición}
+    \vskip .2cm
+    {\it Si $n \ge m$ entonces existen
+        \begin{equation*}\label{ordenadas_sin_rep_compacta} 
+        \frac{n!}{(n-m)!}
+        \end{equation*}
+        selecciones ordenadas y sin repetición de $m$ elementos de un conjunto de $n$ elementos.}
+    %\end{proposicion}
 \end{frame}
 
 
 
 \begin{frame}
-	
-	%\begin{ejemplo}
-	{\color{blue}Ejemplo}
-	\vskip .2cm
-	Si en un colectivo hay $9$ asientos vacíos. 
-	
-	\vskip .2cm
-	
-	¿De cuántas formas pueden sentarse $3$ personas? 
-	
-	
-	\vskip .2cm\pause
-	{\color{blue}Solución}\pause
-	\vskip .2cm
-	Se trata de ver cuantas selecciones ordenadas y sin repetición hay de $3$ asientos entre $9$. 
-	\vskip .2cm\pause
-	Primero hagámoslo usando el principio de multiplicación:\pause
-	\vskip .2cm
-	\begin{itemize}
-		\item 1° persona: 9 lugares posibles. Total: 9\pause
-		\item 2° persona: 8 lugares posibles. Total: $9 \times 8$\pause
-		\item 3° persona: 7 lugares posibles. Total: $9\times 8\times 7$.
-	\end{itemize}
-	
+    
+    %\begin{ejemplo}
+    {\color{blue}Ejemplo}
+    \vskip .2cm
+    Si en un colectivo hay $9$ asientos vacíos. 
+    
+    \vskip .2cm
+    
+    ¿De cuántas formas pueden sentarse $3$ personas? 
+    
+    
+    \vskip .2cm\pause
+    {\color{blue}Solución}\pause
+    \vskip .2cm
+    Se trata de ver cuantas selecciones ordenadas y sin repetición hay de $3$ asientos entre $9$. 
+    \vskip .2cm\pause
+    Primero hagámoslo usando el principio de multiplicación:\pause
+    \vskip .2cm
+    \begin{itemize}
+        \item 1° persona: 9 lugares posibles. Total: 9\pause
+        \item 2° persona: 8 lugares posibles. Total: $9 \times 8$\pause
+        \item 3° persona: 7 lugares posibles. Total: $9\times 8\times 7$.
+    \end{itemize}
+    
 \end{frame}
 
 
 
-\begin{frame}		
-	Este número es
-	$$
-	9 \cdot 8 \cdot 7 , \qquad \text{$3$ - factores.}
-	$$
-	%\end{ejemplo}
-	\vskip .2cm
-	\pause
-	Podríamos haberlo hecho directamente por la proposición: elegir  3 elementos entre 9 son
-	\vskip .2cm
-	\begin{align*}
-	\frac{9!}{(9-3)!} &= \frac{9!}{6!} \\
-	&= \frac{ 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4\cdot 3\cdot 2\cdot1}{6\cdot 5\cdot 4\cdot 3\cdot 2\cdot1} \\
-	&= 9  \cdot 8\cdot 7
-	\end{align*}
-	posibilidades.
-	\qed
+\begin{frame}        
+    Este número es
+    $$
+    9 \cdot 8 \cdot 7 , \qquad \text{$3$ - factores.}
+    $$
+    %\end{ejemplo}
+    \vskip .2cm
+    \pause
+    Podríamos haberlo hecho directamente por la proposición de la p. \ref{ordenadas_sin_rep_compacta}: elegir  3 elementos entre 9 son
+    \vskip .2cm
+    \begin{align*}
+    \frac{9!}{(9-3)!} &= \frac{9!}{6!} \\
+    &= \frac{ 9  \cdot 8\cdot 7\cdot 6\cdot 5\cdot 4\cdot 3\cdot 2\cdot1}{6\cdot 5\cdot 4\cdot 3\cdot 2\cdot1} \\
+    &= 9  \cdot 8\cdot 7
+    \end{align*}
+    posibilidades.
+    \qed
 \end{frame}
 
 
 
 
 \begin{frame}\frametitle{Permutaciones}
-	
+    
 
-	Hay 
-	$$
-	\frac{n!}{0!}= n!
-	$$
-	selecciones ordenadas y sin repetición de  $n$ elementos en un conjunto con $n$ elementos. 
-	\vskip .4cm\pause
-	
-	Las selecciones ordenadas y sin repetición de  $n$ elementos en un conjunto con $n$ elementos se denominan {\em permutaciones} de grado $n$.
-		\vskip .4cm\pause
-	Hay, pues, $n!$ permutaciones de grado $n$.
-	\vskip .4cm
+    Hay 
+    $$
+    \frac{n!}{0!}= n!
+    $$
+    selecciones ordenadas y sin repetición de  $n$ elementos en un conjunto con $n$ elementos. 
+    \vskip .4cm\pause
+    
+    Las selecciones ordenadas y sin repetición de  $n$ elementos en un conjunto con $n$ elementos se denominan {\em permutaciones} de grado $n$.
+        \vskip .4cm\pause
+    Hay, pues, $n!$ permutaciones de grado $n$.
+    \vskip .4cm
 
 
 \end{frame}
@@ -398,52 +396,52 @@ Dado el conjunto $\mathbb I_4 = \{1,2,3,4 \}$ ¿cuántas permutaciones de los el
 
 
 \begin{frame}
-	
-	{\color{blue}Ejemplo}
-	\vskip .2cm
-		¿Cuántas permutaciones pueden formarse con las letras de
-		{\em silvia}?
-		\pause
-		\vskip .2cm
-		{\color{blue}Solución}\pause
-		\vskip .2cm
-		Afirmamos que se pueden formar  $\displaystyle{\frac{6!}{2!}}$ palabras usando las letras de {\em silvia}.
-		
-		Si escribo en lugar de {\em silvia},
-		$$
-		\text{\em s i l v i' a}
-		$$
-		Es decir si cambio la segunda {\em i } por {\em i'}, todas las letras son distintas, luego hay $6!$ permutaciones, pero
-		cada par de permutaciones del tipo
-		\begin{align*}
-		\cdots \text{\em i } \cdots  \text{\em i' }  \cdots \\
-		\cdots \text{\em i' } \cdots  \text{\em i } \cdots
-		\end{align*}
-		coinciden, por lo tanto tengo que dividir por $2$ el número total de permutaciones: $6! / 2! = 360$.\qed
-		
+    
+    {\color{blue}Ejemplo}
+    \vskip .2cm
+        ¿Cuántas permutaciones pueden formarse con las letras de
+        {\em silvia}?
+        \pause
+        \vskip .2cm
+        {\color{blue}Solución}\pause
+        \vskip .2cm
+        Afirmamos que se pueden formar  $\displaystyle{\frac{6!}{2!}}$ palabras usando las letras de {\em silvia}.
+        
+        Si escribo en lugar de {\em silvia},
+        $$
+        \text{\em s i l v i' a}
+        $$
+        Es decir si cambio la segunda {\em i } por {\em i'}, todas las letras son distintas, luego hay $6!$ permutaciones, pero
+        cada par de permutaciones del tipo
+        \begin{align*}
+        \cdots \text{\em i } \cdots  \text{\em i' }  \cdots \\
+        \cdots \text{\em i' } \cdots  \text{\em i } \cdots
+        \end{align*}
+        coinciden, por lo tanto tengo que dividir por $2$ el número total de permutaciones: $6! / 2! = 360$.\qed
+        
 \end{frame}
 
 
-\begin{frame}		Tomemos la palabra
-		$$
-		\text{\em ramanathan}
-		$$
-		el número total de permutaciones es $$\displaystyle{\frac{10!}{ 4!2!}}.$$
-		\pause
-		En efecto, escribiendo el nombre anterior así 
-		$$
-		r_1\;a_1\;m_1\;a_2\;n_1\;a_3\;t_1\;h_1\;a_4\;n_2
-		$$
-		el número total de permutaciones es $10!$ Pero
-		permutando las $a_i$ y las $n_i$ sin mover las otras letras obtenemos
-		la misma permutación de {\em ramanathan}.
-		\vskip .2cm
-		Como hay $4!$ permutaciones de las letras $a_1$, $a_2$, $a_3$, $a_4$, y
-		$2!$ de $n_1$, $n_2$ el número buscado es 
-		$$
-		\frac{10!}{ 4!2!}.
-		$$
-		
+\begin{frame}        Tomemos la palabra
+        $$
+        \text{\em ramanathan}
+        $$
+        el número total de permutaciones es $$\displaystyle{\frac{10!}{ 4!2!}}.$$
+        \pause
+        En efecto, escribiendo el nombre anterior así 
+        $$
+        r_1\;a_1\;m_1\;a_2\;n_1\;a_3\;t_1\;h_1\;a_4\;n_2
+        $$
+        el número total de permutaciones es $10!$ Pero
+        permutando las $a_i$ y las $n_i$ sin mover las otras letras obtenemos
+        la misma permutación de {\em ramanathan}.
+        \vskip .2cm
+        Como hay $4!$ permutaciones de las letras $a_1$, $a_2$, $a_3$, $a_4$, y
+        $2!$ de $n_1$, $n_2$ el número buscado es 
+        $$
+        \frac{10!}{ 4!2!}.
+        $$
+        
 
 \end{frame}
 
