--- a/2022-1/beamer/C06_md1.tex
+++ b/2022-1/beamer/C06_md1.tex
@@ -119,6 +119,29 @@
 
 
 
+\begin{frame}\frametitle{Problemas de conteo}     
+
+    Contar,  a veces, no es una tarea sencilla. \pause
+
+    \vskip .4cm
+
+    Por ejemplo: \pause
+
+
+    \begin{itemize}
+        \item ¿Cuántas chapas patente  es posible hace con el actual esquema de numeración? Nos referimos a las patentes de automóviles en Argentina.  \pause
+        \item ¿De cuantas formas se pueden sentar 7 personas en un colectivo de 20 asientos?
+    \end{itemize}
+    \pause
+    \vskip .4cm
+
+    En las próximas clases podremos resolver estos dos problemas utilizando \textit{técnicas de conteo.}
+    \pause
+    \vskip .4cm
+
+    Las técnicas de conteo son estrategias matemáticas que permiten determinar el número total de resultados que pueden haber a partir de hacer combinaciones dentro de un conjunto o conjuntos de objetos.
+
+\end{frame}
 
 \begin{frame}\frametitle{Cardinal de un conjunto }     
 
