--- a/2022-1/beamer/C06_md1.tex
+++ b/2022-1/beamer/C06_md1.tex
@@ -1,6 +1,6 @@
-%\documentclass[handout]{beamer} % sin pausas
-\documentclass{beamer} 
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+\documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} 
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usetheme{CambridgeUS}
 
@@ -129,8 +129,8 @@
 
 
     \begin{itemize}
-        \item ¿Cuántas chapas patente  es posible hace con el actual esquema de numeración? Nos referimos a las patentes de automóviles en Argentina.  \pause
-        \item ¿De cuantas formas se pueden sentar 7 personas en un colectivo de 20 asientos?
+        \item ¿Cuántas chapas patente  es posible hacer con el actual esquema de numeración? Nos referimos a las patentes de automóviles en Argentina.  \pause
+        \item ¿De cuantas formas se pueden elegir 7 personas entre 20? (no importa el orden de la elección)
     \end{itemize}
     \pause
     \vskip .4cm
@@ -189,7 +189,7 @@ Sean $A_1,\ldots,A_n$ conjuntos finitos tal que $A_i \cap A_j = \emptyset$ cuand
 \end{equation*}
 \pause
 
-\vskip .4cm
+\vskip .2cm
 
 Remarcamos que para aplicar el principio de adición es necesario que los eventos se { \bf excluyan mutuamente}. El caso general es
 \begin{equation*}
@@ -199,9 +199,9 @@ Remarcamos que para aplicar el principio de adición es necesario que los evento
 \end{frame}
 
 \begin{frame}\frametitle{El principio de multiplicación} 
-        Suponga que una actividad consiste de $2$ etapas y la primera etapa puede ser realizada de $n_1$ maneras y la etapa $2$  puede realizarse de $n_2$  maneras, independientemente de como se ha hecho la etapa $1$. 
+        Suponga que una actividad consiste de $2$ etapas y la primera etapa puede ser realizada de $n$ maneras y la etapa $2$  puede realizarse de $m$  maneras, independientemente de como se ha hecho la etapa $1$. 
         \vskip .2cm
-        {\it Principio de multiplicación:} la actividad puede ser realizada de $n_1\cdot n_2$  formas distintas.
+        {\it Principio de multiplicación:} la actividad puede ser realizada de $n\cdot m$  formas distintas.
         
     \pause     
     \vskip .6cm
