--- a/2022-1/beamer/C07_md1.tex
+++ b/2022-1/beamer/C07_md1.tex
@@ -1,6 +1,6 @@
-%\documentclass[handout]{beamer} % sin pausas
-\documentclass{beamer} 
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+\documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} 
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usetheme{CambridgeUS}
 
@@ -100,7 +100,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[08/04/2022]{7 de abril  de 2022}
+\date[07/04/2022]{7 de abril  de 2022}
 
 
 
@@ -316,7 +316,9 @@
     
     \vskip .2cm
     
-    ¿De cuántas formas pueden sentarse $3$ personas? 
+    ¿De cuántas formas se pueden distribuir $3$ pasajeros? 
+    
+    Lo que se está preguntando es cuantas posibles distribuciones de $3$  asientos existen (no importa quien se sienta  en cada asiento). 
     
     
     \vskip .2cm\pause
