--- a/2022-1/beamer/C11_md1.tex
+++ b/2022-1/beamer/C11_md1.tex
@@ -1,6 +1,6 @@
-%\documentclass{beamer} 
-\documentclass[handout]{beamer} % sin pausas
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+%\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} 
+\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usetheme{CambridgeUS}
 
@@ -101,7 +101,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[26/04/2022]{26 de abril  de 2022}
+\date[28/04/2022]{28 de abril  de 2022}
 
 
 
